resources/assets/css/custom.css
.sorting_asc {
    background: url('/images/lib/datatables/sort_asc.png') no-repeat center right !important;
}

.sorting_desc {
    background: url('/images/lib/datatables/sort_desc.png') no-repeat center right !important;
}

.sorting {
    background: url('/images/lib/datatables/sort_both.png') no-repeat center right !important;
}

.sorting_asc_disabled {
    background: url('/images/lib/datatables/sort_asc_disabled.png') no-repeat center right !important;
}

.sorting_desc_disabled {
    background: url('/images/lib/datatables/sort_desc_disabled.png') no-repeat center right !important;
}

/** BOOTSTRAP **/
.left_checkbox {
    width: 40px;
}

.leaflet-container {

}

.navbar-default .navbar-nav > li > .btn-success > a:hover, .navbar-default .navbar-nav > li > .btn-success > a:focus {
    background-color: #20895e;
}

.navbar-default .navbar-nav > li > a.btn-success {
    color: #FFF;
}

.navbar-default .navbar-nav > li > a.btn-success:hover {
    background-color: #20895E;
}

.panel-heading {
    font-size: 28px;
}

.panel-heading-wide {
    text-align: center;
}

.alert.alert-danger ul {
    margin-bottom: 0;
}

/* Override this so that long race names fit in their group selection boxes */
.dropdown-item {
    padding: 0.25em 0.9em;
}

/** LEAFLET */
#map {
    height: 90vh; /* 90% of viewport height */
    padding: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
}

#map-controls {
    height: 700px;
}

.map-scroll:before {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    content: '';
    background: #00000061;
    z-index: 999;
}

.map-scroll:after {
    content: 'Use ctrl + scroll to zoom the map';
    position: absolute;
    top: 50%;
    width: 100%;
    z-index: 999;
    font-size: 34px;
    color: #eaeaea;
    text-align: center;
}

/* Remove square background and border around enemies */
.leaflet-marker-icon.leaflet-div-icon {
    border: none;
    background-color: unset;
}

.aggressive_enemy_icon,
.neutral_enemy_icon,
.unfriendly_enemy_icon,
.friendly_enemy_icon,
.unset_enemy_icon,
.flagged_enemy_icon {
    width: 11px;
    height: 11px;
}

.boss_enemy_icon {
    width: 32px;
    height: 32px;
}

.enemy_aggressiveness_correction {
    margin-top: -6px;
}

.modifier {
    width: 16px;
    height: 16px;
}

.col-3-5 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 29.1%;
    flex: 0 0 29.1%;
    max-width: 29.1%;
}

.aggressive_enemy_icon {
    background: url("/images/mapicon/aggressive.png") no-repeat center !important;
}

.neutral_enemy_icon {
    background: url("/images/mapicon/neutral.png") no-repeat center !important;
}

.unfriendly_enemy_icon {
    background: url("/images/mapicon/unfriendly.png") no-repeat center !important;
}

.friendly_enemy_icon {
    background: url("/images/mapicon/friendly.png") no-repeat center !important;
}

.boss_enemy_icon {
    background: url("/images/mapicon/boss.png") no-repeat center !important;
}

.unset_enemy_icon {
    background: url("/images/mapicon/unset.png") no-repeat center !important;
}

.flagged_enemy_icon {
    background: url("/images/mapicon/neutral.png") no-repeat center !important;
}

.door_icon {
    background: url("/images/mapicon/door.png") no-repeat center !important;
}

.killzone_icon_big {
    margin-left: -19px !important;
    margin-top: -19px !important;
    border-color: yellow !important;
}

.killzone_enemy_icon_small {
    margin-top: -4px !important;
}

.killzone_enemy_icon_medium {
    margin-top: -4px !important;
}

.killzone_enemy_icon_big {
    margin-top: -4px !important;
}

#map_enemy_visuals,
#map_enemy_forces {
    color: black;
    background-color: #fff;
    border: 2px solid rgba(0, 0, 0, 0.2);
    background-clip: padding-box;
    border-radius: 4px;
    padding: 6px;
}

#map_enemy_visuals {
    width: 200px;
}

.map_enemy_forces_too_much {
    color: red;
}

.map_enemy_forces_too_much_warning {
    color: orange;
}

.map_route_edit_popup_class_color {
    height: 32px;
    margin: 2px 10px;
    border-radius: 3px;
    cursor: pointer;
}

/** GENERAL ICONS */
.username_menu {
    width: 105px;
}

.select_icon {
    width: 24px;
    border-radius: 12px;
    max-height: 24px;
}

.display_icon {
    width: 32px;
    border-radius: 16px;
    max-height: 32px;
}

.user_icon {
    width: 24px;
    color: white;
    text-align: center;
    background-color: gray;
    border-radius: 12px;
    margin-right: 5px;
}

.class_icon {
    background-color: #2B3E50;
}

.default_table {
    width: 100%;
}

/* Class that's used for displaying custom markers with a font-awesome icon instead of the default marker */
.marker_div_icon {
    width: 30px;
    height: 30px;
    text-shadow: 2px 2px #1A1A1A;
}

.marker_div_icon_font_awesome {
    text-align: center; /* Horizontally center the text (icon) */
    line-height: 25px; /* Vertically center the text (icon) */
}

.marker_div_icon_dungeon_start_marker {
    color: green;
}

.marker_div_icon_dungeon_floor_switch_marker {
    color: lightblue;
}

.marker_div_icon_killzone {
    color: #d12600;
    font-size: 30px;
}

.marker_div_icon_mapcomment {
    font-size: 16px;
}

.marker_div_icon_circle_border {
    border: 3px solid;
    border-radius: 15px;
}

.map_map_comment_tooltip {
    width: 240px;
    white-space: normal;
}

/** DATATABLES */
#routes_table_filter {
    display: none;
}

#routes_table .limit_width {
    max-width: 400px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

@media (max-width: 600px) {
    #routes_table .limit_width {
        max-width: 200px;
    }
}

/** INTRO.JS */
.introjs-tooltip {
    width: 400px !important;
}

/** MISC STYLES */
.view_dungeonroute_details_row {
    height: 40px;
}

/* #affixgroup_select_container .affix_row_container, */
.view_dungeonroute_details_row .affix_row_container {
    margin-left: 0;
    margin-right: 0;
}

#view_dungeonroute_group_setup {
    display: flex;
    align-items: center;
}

.affixes_overview_table td {
    padding: 0;
}

.affixes_overview_table .affix_row {
    padding: 5px;
}

.affixes_overview_table .last_column {
    border-left: orange 3px solid;
    border-right: orange 3px solid;
    background-color: #ffa500bb;
}

.affixes_overview_table .last_column.first_row {
    border-top: orange 3px solid;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
}

.affixes_overview_table .last_column.last_row {
    border-bottom: orange 3px solid;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
}

.affixes_overview_table .current_week {
    border-top: rgb(235, 235, 235) 3px solid;
    border-bottom: rgb(235, 235, 235) 3px solid;
    background-color: #2B3E50;
}

.affixes_overview_table .current_week.first_column {
    border-left: rgb(235, 235, 235) 3px solid;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.affixes_overview_table .current_week.last_column {
    border-right: rgb(235, 235, 235) 3px solid;
    border-left: none; /* Disable overlapping borders when both rows overlap */
    padding-left: 8px; /* Compensation for the missing border */
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

